tests/sksl/errors/CallNonFunction.glsl
### Compilation failed:

error: 3: not a function
    x();
    ^^^
1 error
